[package]
edition = "2021"
name = "pico-epaper-tcp"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-sync = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
] }
embassy-executor = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy", features = [
    "nightly",
    "unstable-traits",
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }
embassy-net = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nightly",
    "tcp",
    "dns",
    "udp",
    "dhcpv4",
    "unstable-traits",
] }
embedded-nal-async = "0.4.0"
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "firmware-logs",
] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "overclock",
] }

defmt = "0.3"
defmt-rtt = "0.4"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
    "cfg-target-has-atomic",
    "unstable",
] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
display-interface = "0.4.1"
heapless = "0.7.15"

embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
static_cell = { version = "1.1", features = ["nightly"] }
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
epd-waveshare = "*"

[profile.release]
debug = 2
